--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.datasource.driverClassName=org.h2.Driver
 # TODO Append connection to DB PostgreSQL
 #---
 # spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-# spring.datasource.username=postgres
-# spring.datasource.password=1984
+# spring.datasource.username=
+# spring.datasource.password=
 # spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.sql.init.mode=always
@@ -27,4 +27,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
-spring.config.activate.on-profile=ci,test
+# spring.config.activate.on-profile=ci,test
