--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,12 @@
 			<artifactId>json-path</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<resources>
