--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,19 +6,19 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 # TODO Append connection to DB H2
 #---
-# spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:h2:mem:shareit
 # spring.datasource.url=jdbc:h2:file:./db/shareit
-# spring.datasource.username=test
-# spring.datasource.password=test
-# spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.driverClassName=org.h2.Driver
 
 #---
 # TODO Append connection to DB PostgreSQL
 #---
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=test
-spring.datasource.password=test
-spring.datasource.driverClassName=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+# spring.datasource.username=test
+# spring.datasource.password=test
+# spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.sql.init.mode=always
 
