--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,16 +4,19 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
-# TODO Append connection to DB PostgreSQL
+# TODO Append connection to DB H2
 #---
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.url=jdbc:h2:mem:shareit
+# spring.datasource.url=jdbc:h2:file:./db/shareit
 spring.datasource.username=test
 spring.datasource.password=test
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driverClassName=org.h2.Driver
 
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+spring.config.activate.on-profile=ci,test
