--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+#---
+spring.config.activate.on-profile=ci,test
+
+# spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.driverClassName=org.h2.Driver
