--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.jpa.properties.hibernate.show_sql=true
 #---
 spring.config.activate.on-profile=ci,test
 
-# spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.url=jdbc:h2:mem:shareit
+# spring.datasource.url=jdbc:h2:file:./db/shareit
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driverClassName=org.h2.Driver
